--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "mini-message-board",
+  "name": "express-locallibrary-tutorial",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
-  },
-  "devDependencies": {
-    "@flydotio/dockerfile": "^0.5.0"
+    "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www",
+    "serverstart": "DEBUG=express-locallibrary-tutorial:* & npm run devstart"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
-    "http-errors": "^2.0.0",
-    "morgan": "^1.10.0"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "mongoose": "^8.1.1",
+    "morgan": "~1.9.1",
+    "pug": "^2.0.0-beta11"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
